src/test/ui/issues/issue-7950.stderr
error[E0599]: no function or associated item named `bar` found for type `Foo` in the current scope
  --> $DIR/issue-7950.rs:6:10
   |
LL | struct Foo;
   | ----------- function or associated item `bar` not found for this
...
LL |     Foo::bar();
   |          ^^^ function or associated item not found in `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
